--- a/01哈希.md
+++ b/01哈希.md
@@ -1,4 +1,4 @@
-1. 两数之和
+# 1. 两数之和
 
 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
 
@@ -8,7 +8,7 @@
 
 - 排序+二分查找法
 
-```
+```python
 class Solution:
     def twoSum(self, nums: List[int], target: int) -> List[int]:
         af = nums.copy()
@@ -48,7 +48,7 @@ class Solution:
 
 - 哈希法
 
-```
+```python
 class Solution:
     def twoSum(self, nums: List[int], target: int) -> List[int]:
         dic = {}
@@ -65,3 +65,54 @@ class Solution:
             if tg in dic:
                 return [dic[e], dic[tg]]
 ```
+
+# 2. 字母异位词分组
+
+给你一个字符串数组，请你将 字母异位词 组合在一起。可以按任意顺序返回结果列表。
+
+字母异位词 是由重新排列源单词的所有字母得到的一个新单词。
+
+
+## 2.1 知识速递
+合理设计的哈希键能够有效地整合原始信息，找出对于解题有用的结果信息
+常见哈希键设计：
+
+- 排序后的字符串或数组作为键
+当处理字符串或数组时，如果元素的顺序不重要，可以通过对这些元素进行排序，然后使用排序后的字符串或数组作为哈希键。这种方法的优点是，无论元素的初始顺序如何，只要它们的组成相同，排序后都会得到相同的键值，从而确保了键的唯一性。例如，在处理字母异位词分组时，可以将每个单词的字母排序，然后用排序后的字符串作为键来分组所有的异位词20。
+
+- 偏移量作为键
+如果在处理数据时只关心元素之间的相对位置或偏移量，可以使用偏移量作为哈希键。这种设计通常用于需要跟踪元素相对于某个参考点（如数组中的第一个元素）的位置变化的场景。例如，如果你有一系列的时间戳数据，你可能会对每个时间戳与第一个时间戳的差值感兴趣，这个差值就可以作为哈希键
+
+- 子树的序列化表示作为键
+在处理树结构数据时，尤其是二叉树，可以使用子树的序列化表示作为哈希键。序列化是将树结构转换为字符串或其他线性形式的过程，这样可以唯一地表示子树的结构和内容。这种方法在寻找重复子树或比较树结构时非常有用，因为序列化后的字符串可以作为哈希表中的键，以便快速查找和比较
+
+## 2.2 解题
+
+- 排序后的字符串作为键
+```python
+class Solution:
+    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
+        # 定义一个字典，用于存储字母异位词分组结果
+        d = defaultdict(list)
+        # 将单词按照字母顺序排序，并作为键
+        for s in strs: d[''.join(sorted(s))].append(s)
+        return list(d.values())  
+```
+
+- 素数 利用分解质因子序列的唯一性，一个整数表达一个无序字符串。
+```python
+class Solution:
+    def groupAnagrams(self, strs: List[str]) -> List[List[str]]:
+        prime = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103]
+        lookup = defaultdict(list)
+        for _str in strs:
+            key_val = 1
+            for s in _str:
+                key_val *= prime[ord(s) - 97]
+            lookup[key_val].append(_str)
+        return list(lookup.values())
+
+```
+
+# 3. 最长连续序列
+
