--- a/01哈希.md
+++ b/01哈希.md
@@ -1,3 +1,15 @@
+# 0 知识速递
+合理设计的哈希键能够有效地整合原始信息，找出对于解题有用的结果信息
+常见哈希键设计：
+- 排序后的字符串或数组作为键
+当处理字符串或数组时，如果元素的顺序不重要，可以通过对这些元素进行排序，然后使用排序后的字符串或数组作为哈希键。这种方法的优点是，无论元素的初始顺序如何，只要它们的组成相同，排序后都会得到相同的键值，从而确保了键的唯一性。例如，在处理字母异位词分组时，可以将每个单词的字母排序，然后用排序后的字符串作为键来分组所有的异位词20。
+
+- 偏移量作为键
+如果在处理数据时只关心元素之间的相对位置或偏移量，可以使用偏移量作为哈希键。这种设计通常用于需要跟踪元素相对于某个参考点（如数组中的第一个元素）的位置变化的场景。例如，如果你有一系列的时间戳数据，你可能会对每个时间戳与第一个时间戳的差值感兴趣，这个差值就可以作为哈希键
+
+- 子树的序列化表示作为键
+在处理树结构数据时，尤其是二叉树，可以使用子树的序列化表示作为哈希键。序列化是将树结构转换为字符串或其他线性形式的过程，这样可以唯一地表示子树的结构和内容。这种方法在寻找重复子树或比较树结构时非常有用，因为序列化后的字符串可以作为哈希表中的键，以便快速查找和比较
+
 # 1. 两数之和
 
 给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
@@ -22,7 +34,6 @@ class Solution:
             st, end = i+1, l-1
             while st <= end:
                 mid = (st+end)//2
-                # print(i ,mid)
                 if af[mid] < tg:
                     st = mid + 1
                 elif af[mid] > tg:
@@ -73,20 +84,7 @@ class Solution:
 字母异位词 是由重新排列源单词的所有字母得到的一个新单词。
 
 
-## 2.1 知识速递
-合理设计的哈希键能够有效地整合原始信息，找出对于解题有用的结果信息
-常见哈希键设计：
-
-- 排序后的字符串或数组作为键
-当处理字符串或数组时，如果元素的顺序不重要，可以通过对这些元素进行排序，然后使用排序后的字符串或数组作为哈希键。这种方法的优点是，无论元素的初始顺序如何，只要它们的组成相同，排序后都会得到相同的键值，从而确保了键的唯一性。例如，在处理字母异位词分组时，可以将每个单词的字母排序，然后用排序后的字符串作为键来分组所有的异位词20。
-
-- 偏移量作为键
-如果在处理数据时只关心元素之间的相对位置或偏移量，可以使用偏移量作为哈希键。这种设计通常用于需要跟踪元素相对于某个参考点（如数组中的第一个元素）的位置变化的场景。例如，如果你有一系列的时间戳数据，你可能会对每个时间戳与第一个时间戳的差值感兴趣，这个差值就可以作为哈希键
-
-- 子树的序列化表示作为键
-在处理树结构数据时，尤其是二叉树，可以使用子树的序列化表示作为哈希键。序列化是将树结构转换为字符串或其他线性形式的过程，这样可以唯一地表示子树的结构和内容。这种方法在寻找重复子树或比较树结构时非常有用，因为序列化后的字符串可以作为哈希表中的键，以便快速查找和比较
-
-## 2.2 解题
+- 解题
 
 - 排序后的字符串作为键
 ```python
@@ -116,3 +114,28 @@ class Solution:
 
 # 3. 最长连续序列
 
+给定一个未排序的整数数组 nums ，找出数字连续的最长序列（不要求序列元素在原数组中连续）的长度。
+
+请你设计并实现时间复杂度为 O(n) 的算法解决此问题。
+
+- 题解
+使用哈希表来记录数组中的所有数，以实现对数值的快速查找。
+直接定位到每个连续序列的起点，从起点开始遍历每个连续序列，从而获得长度。
+（什么样的数才是一个连续序列的起点？
+答案是这个数的前一个数不存在于数组中，因为我们需要能够快速判断当前数num的前一个数num - 1是否存在于数组中。）
+```python
+class Solution:
+    def longestConsecutive(self, nums: List[int]) -> int:
+        if len(nums) <= 1:
+            return len(nums)
+        s = set(nums)
+        max_len = 1
+        for x in s:
+            if (x-1) in s:
+                continue
+            rt = x
+            while (rt + 1) in s:
+                rt = rt + 1
+            max_len = max(max_len, rt-x+1)
+        return max_len
+```
