--- a/02双指针.md
+++ b/02双指针.md
@@ -1,5 +1,5 @@
-# 0 双指针思想
-- 双指针算法概念
+# 0 双指针算法介绍
+## 算法概念
 双指针算法是一种常用于解决数组或链表问题的技巧，它使用两个指针在数据结构中遍历元素，以此寻找满足特定条件的元素或者完成特定操作。双指针通常以不同的速度或方向移动，例如快慢指针、左右指针、对撞指针，利用特定的策略减少计算的复杂度。这一技巧可以让原本需要双重循环才能解决的问题，通过线性遍历获得更高效的解决方案。
 
 - 快慢指针
@@ -13,6 +13,27 @@
 
 - 双指针的优势
 双指针算法能够将时间复杂度为O(n^2)的暴力解法优化至O(n)，主要通过减少不必要的遍历，并且在大多数情况下不需要额外的空间，从而提高算法的时间与空间效率。
+
+## 使用技巧
+- 边界条件处理
+边界条件是编写算法时经常被忽视的部分，但处理不当会导致程序错误。对于双指针算法，重要的是要确保指针在任何时候都不会超出数组或链表的界限。例如，如果左指针必须始终在右指针的左侧，那么在移动左指针时需要确保它不会超过右指针的当前位置。
+
+- 指针移动策略
+错误的指针移动逻辑可能导致漏掉一些情况，或者处理了一些不应该处理的情况。例如，在某些问题中，当两个指针指向的元素满足特定条件时，可能需要同时移动两个指针。如果只移动了一个指针，可能会造成错误的结果。
+
+- 错误的赋值和引用操作
+错误的赋值和引用可能会导致程序崩溃或逻辑错误。例如，当使用双指针来遍历一个二维数组或是指针数组时，错误地使用了解引用或赋值操作可能会导致访问无效的内存区域。
+
+- 循环条件设置
+循环条件的错误设置可能导致循环过早结束或无法结束。在双指针算法中，循环条件通常与两个指针的位置有关。设置错误的循环退出条件可能导致未能检查所有元素。
+
+- 要避免这些错误，可以采取以下措施：
+
+仔细检查指针移动的有效性，特别是在数组或链表边界附近。
+确保在正确的条件下更新指针。
+对代码进行严格的测试，包括对边界条件的测试。
+理解算法的要求，并结合实际问题仔细考虑指针移动策略。
+在适当的环节进行优化并保持代码的简洁性。
 
 # 1. 移动零
 给定一个数组 nums，编写一个函数将所有 0 移动到数组的末尾，同时保持非零元素的相对顺序。
@@ -77,5 +98,31 @@ class Solution:
 
 说明：你不能倾斜容器。
 
-[!img](question_11.jpg)
+![盛最多水的容器](question_11.jpg 示例)
 
+```python
+class Solution:
+    def maxArea(self, height: List[int]) -> int:
+        if len(height) == 2:
+            return min(height)*1
+        p1, p2 = 0, len(height)-1
+        area = 0
+        while p1<=p2:
+            l,r = height[p1], height[p2]
+            area = max(area, min(l,r)*(p2-p1))
+            # print(area,l,r)
+            # 左右指针移动目的 1. 找到更高的 2. 提高短板
+            if l <= r:
+                while height[p1+1] <= l and p1+1<p2:
+                    p1 += 1
+                p1 += 1
+                l = height[p1]
+            else:
+                while height[p2-1] <= r and p1<p2-1:
+                    p2 -= 1
+                p2 -= 1
+                r = height[p2]
+            if p1 >= p2:
+                break
+        return area
+```
