--- a/02双指针.md
+++ b/02双指针.md
@@ -98,7 +98,7 @@ class Solution:
 
 说明：你不能倾斜容器。
 
-![盛最多水的容器](question_11.jpg "示例")
+![盛最多水的容器](./question_11.jpg "示例")
 
 ```python
 class Solution:
