--- a/热题100/02双指针.md
+++ b/热题100/02双指针.md
@@ -126,3 +126,59 @@ class Solution:
                 break
         return area
 ```
+
+# 3. 三数之和
+
+给你一个整数数组 nums ，判断是否存在三元组 [nums[i], nums[j], nums[k]] 满足 i != j、i != k 且 j != k ，同时还满足 nums[i] + nums[j] + nums[k] == 0 。请
+
+你返回所有和为 0 且不重复的三元组。
+
+注意：答案中不可以包含重复的三元组。
+
+- 题解
+难点在于如何去重
+时间复杂度 O(N2)是必然的，在双层循环中的很多处理，都是为了去重。
+
+```python
+class Solution:
+    def threeSum(self, nums: List[int]) -> List[List[int]]:
+        if len(nums) == 3:
+            if sum(nums) == 0:
+                return [nums]
+            else:
+                return []
+        
+        nums.sort()
+        ret = []
+        
+        lg = len(nums)
+        for i,x in enumerate(nums):
+            if x > 0:   break  # x < y < z
+            if i > 0 and x == nums[i-1]:   continue
+            
+            y, z = i+1, lg-1
+            while y < z:
+                s = x + nums[y] + nums[z]
+                if s < 0:
+                    y += 1
+                    # 当s < 0时，i += 1并跳过所有重复的nums[i]
+                    while y < z and nums[y] == nums[y - 1]: y += 1 
+                elif s > 0:
+                    z -= 1
+                    # 同上
+                    while y < z and nums[z] == nums[z + 1]: z -= 1
+                else:
+                    ret.append([x, nums[y], nums[z]])
+                    y += 1
+                    z -= 1
+                    while y < z and nums[y] == nums[y - 1]: y += 1
+                    while y < z and nums[z] == nums[z + 1]: z -= 1
+                    # 当s == 0时，记录组合至ret，执行y += 1和z -= 1并跳过所有重复的nums[y]和nums[z]
+        return ret
+```
+
+# 4. 接雨水
+
+给定 n 个非负整数表示每个宽度为 1 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
+题目知识属于混合类型,偏于栈、单调栈知识。 后续栈一类题目学习。
+
