--- a/热题100/03滑窗和子串.md
+++ b/热题100/03滑窗和子串.md
@@ -1,5 +1,16 @@
 # 0 滑动窗口和子串
 
+参考大神们总结的内容，介绍下滑动窗的统一解题框架
+滑动窗口可用于解决一些列的字符匹配问题，典型的问题包括：在字符串 s 中找到一个最短的子串，使得其能覆盖到目标字符串 t。对于目标字符串 t，我们可以在字符串 s 上滑动窗口，当窗口包含 t 中的全部字符后，我们再根据题意考虑能否收缩窗口。
+
+在窗口滑动的过程中，我们可以暴力地统计出窗口中所包含的字符是否满足题目要求，但这没有利用到滑动窗口的基本性质。事实上，窗口的滑动过程可分解为以下基础操作：
+窗口右边界往右滑动一位：窗口右端新加入字符，但窗口中的其他字符没有发生变化；加入字符时应该更新哪些数据？
+什么情况下暂停扩大，开始收缩？
+窗口左边界往右滑动一位：窗口左端移出字符时，但窗口中的其他字符没有发生变化。移出字符时应该更新哪些数据？
+我们要的结果应该在扩大窗口时还是缩小窗口时进行更新？
+因此，我们可以考虑在「一进一出」这样的两个基础操作上做文章。
+
+
 # 1. 无重复字符的最长子串
 给定一个字符串 s ，请你找出其中不含有重复字符的 最长子串 的长度。
 
@@ -33,4 +44,66 @@ class Solution:
         return ret
 ```
 
-# 2. 
+# 2. 找到字符串中所有字母异位词
+
+给定两个字符串 s 和 p，找到 s 中所有 p 的 异位词 的子串，返回这些子串的起始索引。不考虑答案输出的顺序。
+
+异位词 指由相同字母重排列形成的字符串（包括相同的字符串）。
+
+- 题解
+又是异位词 ，于是仍然借鉴前面的素数乘积唯一的思路解决了
+另外的思路是 维护一个字典 参考上题的思路解决。 (用乘积判断本质是哈希思想， 肯定比用字典判断省事)
+
+```python
+class Solution:
+    def findAnagrams(self, s: str, p: str) -> List[int]:
+        if  len(p) > len(s):
+            return []
+        prime = [2,3,5,7,11,13,17,19, 23,29,31,37, 41,43,47,53,59, 61,67,71,73,79, 83,89,97,101 ]
+        tg = [prime[ord(i)-ord('a')]  for i in p]
+        prod_tg = 1
+        for x in tg:
+            prod_tg = prod_tg * x
+        res = []
+        prime_s = [prime[ord(s[i])-ord('a')] for i in range(len(p)-1)]
+        prod = 1
+        for x in prime_s:
+            prod = prod * x
+        for i in range(len(s) - len(p) + 1):
+            tail = i + len(p) - 1
+            # 加一个字符
+            prod = prod * prime[ ord(s[tail]) - ord('a') ]
+            # print(prod, tail)
+            if prod == prod_tg:  res.append(i)
+            # 删一个字符
+            prod = prod // prime[ ord(s[i]) - ord('a') ]
+
+        return res
+```
+
+# 3. 和为k的子数组
+
+给你一个整数数组 nums 和一个整数 k ，请你统计并返回 该数组中和为 k 的子数组的个数 。
+
+子数组是数组中元素的连续非空序列。
+
+- 题解
+
+逐渐优化：1. 暴力求解 2. 用0- N子串 减去 0-(N-M)子串的结果 代表 M-N 子串  3. 通过哈希继续优化
+
+```python
+class Solution:
+    def subarraySum(self, nums: List[int], k: int) -> int:
+        res = 0
+        sums = defaultdict(int)
+        cur = 0
+        sums[0] += 1
+        for n in nums:
+            cur += n
+            if cur - k in sums:
+                    res += sums[cur-k]
+            sums[cur] += 1
+        return res
+```
+
+# 4. 
